# digestive-functors-heist

./: README  README.md  digestive-functors-heist.cabal
Text/Digestive/: Heist.hs
